JEDIT 4.2pre1 VERSION HISTORY

* Version 4.2pre1

Thanks to Kris Kopicki for contributing to this release.

+ Enhancements:

- If regular expressions are enabled, Search->Find Previous now shows a
  dialog box message instead of silently searching forwards.

- Improved C pre-processor syntax highlighting.

+ Optimizations:

- Faster buffer loading.

- Faster activity log.

+ Platform-Specific Changes:

- MacOS plugin version 3.0 now requires Java 1.4.1. All native calls now
  use the Cocoa API, and a dock menu has been added. The dock menu
  provides similar functionality to the plugin menu (Kris Kopicki).

+ Bug Fixes:

- jEdit no longer minimizes and then restores windows when files are
  opened through the edit server on windows. This was done to work
  around an apparent bug in the Windows JRE. If you still experience the
  problem, execute this BeanShell code:

  jEdit.setBooleanProperty("server.brokenToFront",true);

- Some HTTP proxies decompress GZip streams for whatever reason. The
  plugin manager now checks if the stream starts with the GZip magic
  characters; if not, it parses it without decompression, instead of
  throwing an exception.

- Multiple monitors should work properly now (Kris Kopicki).

jEdit buffer local properties:
:wrap=hard:maxLineLen=72:indentSize=2: